--- a/_quarto.yml
+++ b/_quarto.yml
@@ -37,6 +37,10 @@ book:
       - ica/ica-bi.qmd
       - ica/ica-multi.qmd
       - ica/ica-spatial.qmd
+      - ica/ica-wrangling.qmd
+      - ica/ica-dates.qmd
+      - ica/ica-reshaping.qmd
+      - ica/ica-strings.qmd
 
 format:
   html:
