--- a/_quarto.yml
+++ b/_quarto.yml
@@ -49,6 +49,9 @@ book:
       - ica/ica-dates.qmd
       - ica/ica-reshaping.qmd
       - ica/ica-strings.qmd
+      - ica/ica-factors.qmd
+      - ica/ica-joining.qmd
+      - ica/ica-dataimport.qm
 
 format:
   html:
